get todos reverse
